Fix new tag size on mobile

--- a/static/wall.css
+++ b/static/wall.css
@@ -41,8 +41,8 @@
   background-image: url("/img/new.png");
   background-size: contain;
   position: absolute;
-  inline-size: 50px;
-  block-size: 50px;
+  inline-size: 35px;
+  block-size: 35px;
   inset-block-start: 10px;
   inset-inline-end: 10px;
 }
@@ -174,6 +174,11 @@
 }
 
 @media (min-width: 900px) {
+  .wall > li.new::after {
+    inline-size: 50px;
+    block-size: 50px;
+  }
+
   .wall > li.active > article {
     inline-size: min(1200px, calc(100% - 160px));
     block-size: min(600px, calc(100% - 160px));
